# stopwatch

./: CMakeLists.txt  README.md  TODOs.org
src/: Clock.cpp  Clock.h  Stopwatch.cpp  Stopwatch.h  Win.cpp  Win.h  config.h  main.cpp
